gitlab/issues_text/target_missing/host_missing/accel_missing/1295
configure script can fail if compiler flag `-Wunused-parameter` is enabled
Description of problem:
`configure` fails with an error message:

```
ERROR: SafeStack is only supported by the coroutine backend ucontext
```
Steps to reproduce:
1. Run `./configure --cross-prefix=x86_64-w64-mingw32- --disable-werror --extra-cflags=-Wunused-parameter`
Additional information:
Last part of `config.log`:

```
x86_64-w64-mingw32-gcc -m64 -mcx16 -I/mingw64/include -Wunused-parameter -fno-pie -mthreads -std=gnu11 -Wall -fno-pie -no-pie -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wstrict-prototypes -Wredundant-decls -Wundef -Wwrite-strings -Wmissing-prototypes -fno-strict-aliasing -fno-common -fwrapv -Wold-style-declaration -Wold-style-definition -Wtype-limits -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wempty-body -Wnested-externs -Wendif-labels -Wexpansion-to-defined -Wimplicit-fallthrough=2 -Wno-missing-include-dirs -Wno-shift-negative-value -Wno-psabi -Werror -o config-temp/qemu-conf.exe config-temp/qemu-conf.c -L/mingw64/lib -no-pie
config-temp/qemu-conf.c: In function ‘main’:
config-temp/qemu-conf.c:1:14: error: unused parameter ‘argc’ [-Werror=unused-parameter]
    1 | int main(int argc, char *argv[])
      |          ~~~~^~~~
config-temp/qemu-conf.c:1:26: error: unused parameter ‘argv’ [-Werror=unused-parameter]
    1 | int main(int argc, char *argv[])
      |                    ~~~~~~^~~~~~
cc1: all warnings being treated as errors
```

The configure script fails because it tries to compile small C programs with a main function which is declared with arguments `argc` and `argv` although those arguments are unused.

Using the same compiler flag for a native build (`./configure --disable-werror --extra-cflags=-Wunused-parameter`) shows the same errors in `config.log`, but surprisingly does not fail.
